--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,10 +13,11 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Sherlock.Light" >
+        android:theme="@style/Theme.Parakeet_light" >
         <activity
             android:name="com.ilsecondodasinistra.parakeet.ParakeetMain"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +26,8 @@
         </activity>
         <activity
             android:name="com.ilsecondodasinistra.parakeet.AboutActivity"
-            android:label="@string/action_about" >
+            android:label="@string/action_about"
+            android:theme="@style/AppTheme" >
         </activity>
 
         <service android:name="com.ilsecondodasinistra.parakeet.NotificationService" >
@@ -36,7 +38,8 @@
 
         <activity
             android:name="settings.ParakeetSettingsActivity"
-            android:label="@string/title_activity_parakeet_settings" >
+            android:label="@string/title_activity_parakeet_settings" 
+            android:theme="@style/AppTheme">
         </activity>
     </application>
 
