--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Parakeet_light" >
+        android:theme="@style/Theme.Sherlock.Light.DarkActionBar" android:name="MyApplication">
         <activity
             android:name="com.ilsecondodasinistra.parakeet.ParakeetMain"
             android:label="@string/app_name"
