--- a/parakeet-base/src/main/AndroidManifest.xml
+++ b/parakeet-base/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ilsecondodasinistra.parakeet"
-    android:installLocation="auto">
+    android:installLocation="auto"
+    android:targetSandboxVersion="2">
 
     <application
         android:allowBackup="true"
@@ -8,6 +9,10 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
         android:name="MyApplication">
+        <meta-data
+            android:name="asset_statements"
+            android:resource="@string/asset_statements" />
+
         <activity
             android:name="com.ilsecondodasinistra.parakeet.ParakeetMain"
             android:label="@string/app_name"
@@ -17,26 +22,19 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter>
+            <meta-data
+                android:name="default-url"
+                android:value="https://parakeet-instantapp.000webhostapp.com/open" />
+            <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data
-                    android:scheme="https"
-                    android:host="parakeet-instantapp.000webhostapp.com"
-                    android:pathPattern="/open" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:scheme="http"
-                    android:host="parakeet-instantapp.000webhostapp.com" />
+                <data android:host="parakeet-instantapp.000webhostapp.com" />
+                <data android:pathPattern="/open" />
+                <data android:scheme="http"/>
+                <data android:scheme="https" />
             </intent-filter>
         </activity>
         <activity
