--- a/parakeetapk/build.gradle
+++ b/parakeetapk/build.gradle
@@ -4,12 +4,12 @@ android {
     compileSdkVersion 27
 
     defaultConfig {
-        applicationId "com.example.marco.parakeet"
+        applicationId "com.ilsecondodasinistra.parakeet"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
-
+        versionCode 20
+        versionName "2.6"
+//        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
