--- a/parakeet-base/build.gradle
+++ b/parakeet-base/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile 'com.github.amlcurran.showcaseview:library:5.4.3'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "joda-time:joda-time:2.9.6"
+    feature project(":aboutmodule")
+    compile project(path: ':parakeetshared')
 }
