--- a/aboutmodule/src/main/AndroidManifest.xml
+++ b/aboutmodule/src/main/AndroidManifest.xml
@@ -1,15 +1,42 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ilsecondodasinistra.parakeet.aboutmodule" >
+    package="com.ilsecondodasinistra.parakeet.aboutmodule">
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
 
+        <meta-data
+            android:name="asset_statements"
+            android:resource="@string/asset_statements" />
         <activity
             android:name="com.ilsecondodasinistra.parakeet.shared.AboutActivity"
             android:label="@string/action_about"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme">
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="https"
+                    android:host="parakeet-instantapp.000webhostapp.com"
+                    android:pathPattern="/about" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="http"
+                    android:host="parakeet-instantapp.000webhostapp.com"
+                    android:pathPattern="/about" />
+            </intent-filter>
+        </activity>
 
     </application>
 </manifest>
