--- a/parakeet-base/src/main/AndroidManifest.xml
+++ b/parakeet-base/src/main/AndroidManifest.xml
@@ -23,18 +23,29 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <meta-data
-                android:name="default-url"
-                android:value="https://parakeet-instantapp.000webhostapp.com/open" />
+            android:name="default-url"
+            android:value="https://parakeet-instantapp.000webhostapp.com/open" />
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:host="parakeet-instantapp.000webhostapp.com" />
-                <data android:pathPattern="/open" />
-                <data android:scheme="http"/>
-                <data android:scheme="https" />
+                <data
+                    android:scheme="http"
+                    android:host="parakeet-instantapp.000webhostapp.com"
+                    android:pathPattern="/open" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="https"
+                    android:host="parakeet-instantapp.000webhostapp.com"
+                    android:pathPattern="/open" />
             </intent-filter>
         </activity>
 
