--- a/aboutmodule/build.gradle
+++ b/aboutmodule/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.feature'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion project.myCompileSdkVersion.toInteger()
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 27
-        versionCode 23
-        versionName "2.9"
+        minSdkVersion project.myMinSdkVersion.toInteger()
+        targetSdkVersion project.myTargetSdkVersion.toInteger()
+        versionCode project.myVersionCode.toInteger()
+        versionName project.myVersionName
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
