--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,9 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+myBuildToolsVersion=27.0.1
+myMinSdkVersion=16
+myTargetSdkVersion=27
+myCompileSdkVersion=27
+myVersionCode=30
+myVersionName=3.0
