--- a/parakeet-instantapp/build.gradle
+++ b/parakeet-instantapp/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.instantapp'
 
 android {
-    buildToolsVersion "27.0.1"
+    buildToolsVersion project.myBuildToolsVersion
 }
 
 dependencies {
